# Capstone_2

./: Annual Visitation By Park (1979 -1981).xlsx  Annual Visitation By Park (1982 2001).xlsx  Annual Visitation By Park (2002-2021).xlsx  Oluwole_Anne_Capstone_2.pbix  Park_Info_Lookup  Park_Info_Lookup.csv  PowerBI-Preload.pbix  Untitled.ipynb  north_america_bear_killings.csv  north_america_bear_killings.xlsx  park_scrape.py  pyproject.toml
