[tool.poetry]
name = "capstone project 2"
version = "0.1.0"
description = ""
authors = ["Anne Oluwole"]

[tool.poetry.dependencies]
python = "3.8.10"
pandas = "^1.4.1"
Beautiful = "Soup"
beautifulsoup4 = "^4.10.0"
jupyter = "^1.0.0"
requests = "^2.27.1"
pandas-profiling = "^3.1.0"
sweetviz = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
